@@ -32,5 +32,5 @@
     <ProjectReference type="Gac" localcopy="True" refto="Mono.Posix, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756" />
   </References>
   <GtkDesignInfo partialTypes="True" />
-  <Deployment.LinuxDeployData scriptName="monodoc-editor" />
+  <Deployment.LinuxDeployData scriptName="monodoceditor" />
 </Project>
